--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -1,4 +1,14 @@
 /**
+ * Font
+ */
+* {
+  /* font-family: 'NanumSquareRoundLight'; */
+  font-family: 'NanumSquareRound';
+  /* font-family: 'NanumSquareRoundBold'; */
+  /* font-family: 'NanumSquareRoundExtraBold'; */
+}
+
+/**
  * Smooth Scroll
  */
 html {
