--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -231,3 +231,11 @@ body {
 .sd-btn {
   border-radius: 2rem !important;
 }
+
+.loading-container {
+  background-color: #fefaf6;
+  border-radius: 2rem;
+  border: 2px solid #19B394;
+
+  width: 70%;
+}
