--- a/static/css/survey_result.css
+++ b/static/css/survey_result.css
@@ -162,11 +162,15 @@ body {
 }
 
 .carousel-inner {
-  height: 90%;
+  height: 85%;
 }
 
 .carousel-indicators {
-  height: 10%;
+  height: 5%;
+}
+
+.carousel-button {
+  height: 10%
 }
 
 .carousel-inner img {
@@ -232,12 +236,37 @@ body {
 }
 
 .carousel-indicators {
-  /* background-color: #90c9c2; */
+  /* border-radius: 0 0 2rem 2rem; */
+  border-left: 2px solid #19B394;
+  border-right: 2px solid #19B394;
+  /* border-bottom: 2px solid #19B394; */
+  background-color: #fefaf6;
+}
+
+.carousel-button {
   border-radius: 0 0 2rem 2rem;
   border-left: 2px solid #19B394;
   border-right: 2px solid #19B394;
   border-bottom: 2px solid #19B394;
   background-color: #fefaf6;
+}
+
+.btn-outline-dark {
+  --bs-btn-color: #19B394;
+  --bs-btn-border-color: #19B394;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #19B394;
+  --bs-btn-hover-border-color: #19B394;
+  --bs-btn-focus-shadow-rgb: 33,37,41;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #19B394;
+  --bs-btn-active-border-color: #19B394;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #19B394;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #19B394;
+  --bs-gradient: none;
+  border: 2px solid #19B394;
 }
 
 .carousel-indicators [data-bs-target] {
