--- a/templates/survey.html
+++ b/templates/survey.html
@@ -71,6 +71,30 @@
         <div id="surveyElement"></div>
       </div>
 
+      <!-- Loading Screen -->
+      <div id="loading-screen" class="loading-screen vh-100 justify-content-center align-items-center d-none">
+        <div class="loading-container row justify-content-center align-items-center d-flex py-4">
+
+          <div class="col-12 justify-content-center align-items-center d-flex">
+            <h1 style="color: #19B394;"><b>AI가 귀하와 맞는 유기견을 추천중이에요!</b></h1>
+          </div>
+
+          <div class="col-12 justify-content-center align-items-center d-flex pb-3">
+            <h4 style="color: #19B394;"><b>조금만 기다려 주세요...</b></h4>
+          </div>
+
+          <div class="col-12 justify-content-center align-items-center d-flex pb-3">
+            <img src="{{ url_for('static', filename='img/magnifying-glass.gif') }}" alt="" style="height: 100px;">
+          </div>
+
+          <div class="col-12 justify-content-center align-items-center d-flex">
+            <img src="{{ url_for('static', filename='img/loading-dog.gif') }}" alt="" style="height: 150px;">
+            <!-- <a href="https://www.animatedimages.org/cat-dogs-202.htm"><img src="https://www.animatedimages.org/data/media/202/animated-dog-image-0553.gif" border="0" alt="animated-dog-image-0553" style="height: 200px;"/></a> -->
+          </div>
+
+        </div>
+      </div>
+
     </div>
 
   </section>
