--- a/templates/survey_result.html
+++ b/templates/survey_result.html
@@ -453,12 +453,16 @@
 
                           </div>
 
-                          <div class="carousel-indicators position-relative mx-0 justify-content-center align-items-center d-flex">
+                          <div class="carousel-indicators position-relative m-0 justify-content-center align-items-center d-flex">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                          </div>
+
+                          <div class="carousel-button col-12 pb-3 justify-content-center align-items-center d-flex">
+                            <button type="button" class="btn btn-outline-dark"><b>추천된 유기견 전체보기</b></button>
                           </div>
 
                         </div>
