--- a/static/css/dog_info.css
+++ b/static/css/dog_info.css
@@ -286,13 +286,38 @@ select.filter-breed {
   height: calc((100vh - 144px)/8);
 }
 
-.btn-outline-dark {
+.trait_A,
+.trait_B,
+.trait_C,
+.trait_D,
+.trait_E {
+  --bs-btn-color: #19B394;
+  --bs-btn-border-color: #19B394;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #90C9C2;
+  --bs-btn-hover-border-color: #19B394;
+  --bs-btn-focus-shadow-rgb: 33, 37, 41;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #90C9C2;
+  --bs-btn-active-border-color: #19B394;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #90C9C2;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #19B394;
+  --bs-gradient: none;
+
+  border: #19B394 2px solid;
+}
+
+.breed_history_btn,
+.breed_info_btn,
+.care_comment_btn {
   --bs-btn-color: #19B394;
   --bs-btn-border-color: #19B394;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #19B394;
   --bs-btn-hover-border-color: #19B394;
-  --bs-btn-focus-shadow-rgb: 33,37,41;
+  --bs-btn-focus-shadow-rgb: 33, 37, 41;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #19B394;
   --bs-btn-active-border-color: #19B394;
@@ -325,7 +350,7 @@ select.filter-breed {
 }
 
 .breed-info-container {
-  min-height: calc((100vh - 144px)/2);
+  /* min-height: calc((100vh - 144px)/2); */
   /* height: calc((100vh - 144px)/2); */
 }
 
